# Zathas-AI

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  conversation 1.txt  memory.json  run_server.bat
.claude/: settings.local.json
frontend/: index.html
frontend-react/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-react/src/: App.jsx  index.css  main.jsx
frontend-react/src/components/: ChatInput.jsx  ChatMessage.jsx  MemoryPanel.jsx
frontend-react/src/hooks/: useChat.js
frontend-react/src/lib/: markdown.js
frontend-react/src/pages/: Admin.jsx  Prime.jsx
frontend/assets/: index-CVouSB2N.js  index-CYiQ1b_2.css  index-CYkPHLQ-.js  index-DqlXGAUq.css
src/: analytics.cpp  analytics.h  cloud_inference.cpp  cloud_inference.h  docstore.h  inference.cpp  inference.h  main.cpp  memory.cpp  memory.h  pdf_extract.cpp  pdf_extract.h  server.cpp  server.h
